Fixed grid layout bug that overlaps the next section

--- a/src/styles/Specials.module.css
+++ b/src/styles/Specials.module.css
@@ -1,9 +1,7 @@
 .specialsSection {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    column-gap: 10%;
+    justify-content: flex-start;
     padding-left: var(--padding-left-right);
     padding-right: var(--padding-left-right);
     padding-bottom: var(--padding-top-bottom);
@@ -11,12 +9,9 @@
 }
 
 .specialsDiv.category {
-    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    padding-bottom: 1%;
 }
 
 .specialsDiv.category > h2 { 
@@ -44,7 +39,19 @@
 .specialsDiv.menu article {
     display: flex;
     flex-direction: column;
-    height: 100%;
+}
+
+.specialsDiv.menu article > img {
+    width: 100%;
+    height: 300px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    object-fit: cover;
+}
+
+.specialsDiv.menu article div > img {
+    width: 20px;
+    height: 20px;
 }
 
 .specialsDiv.menu article div > h4 {
@@ -60,7 +67,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
 }
 
 .specialsDiv.menu article div:last-of-type {
@@ -68,27 +74,22 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: center;
-    gap: 2%;
+    gap: 3%;
 }
 
 .specialsDiv.menu article div:last-of-type > h4 {
     margin: 0;
 }
 
-.specialsDiv.menu article > img {
-    max-width: 100%;
-    width: 100%;
-    height: 300px;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    object-fit: cover;
-}
-
 /* Tablets and below */
 @media screen and (max-width: 992px) {
     .specialsDiv.menu article > img {
         height: 200px;
+    }
+
+    .specialsDiv.menu article div > img {
+        width: 10px;
+        height: 10px;
     }
 }
 
@@ -97,11 +98,31 @@
     .specialsDiv.menu article > img {
         height: 150px;
     }
+
+    .specialsDiv.menu article div > img {
+        width: 8px;
+        height: 8px;
+    }
 }
 
 /* Smaller Mobiles and below */
 @media screen and (max-width: 576px) {
+    .specialsDiv.menu {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+    }
+
+    .specialsDiv.menu article:not(article:last-of-type) {
+        margin-bottom: 2%;
+    }
+
     .specialsDiv.menu article > img {
         height: 100px;   
+    }
+
+    .specialsDiv.menu article div > img {
+        width: 8px;
+        height: 8px;
     }
 }
