--- a/src/styles/Testimonials.module.css
+++ b/src/styles/Testimonials.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: space-evenly;
+    align-items: center;
     background-color: #EE9972;
     margin-bottom: var(--margin-top-bottom);
 }
